# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasfile"
version = "0.1.0"
description = "A Python library for reading LAS files."
readme = "README.md"
authors = [{name = "Brandon Zaitz", email = bzlmnop@gmail.com}]
license = {file = "LICENSE", text = "MIT"}
keywords = ["las", "CWLS", "las logs", "petrophysical logs"]
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/bzlmnop/lasfile"

[project.scripts]
lasfile = "lasfile.__main__:main"