# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasfile"
version = "0.1.7"
description = "A Python library for reading LAS files."
readme = "README.md"
keywords = ["las", "CWLS", "las logs", "petrophysical logs"]
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/bzlmnop/lasfile"

[project.scripts]
lasfile = "lasfile.__main__:main"